[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aic-nlp-utils"
version = "0.0.1"
authors = [
  { name="Honza Drchal", email="drchajan@fel.cvut.cz" },
]
description = "AIC NLP Group utility package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "langchain_text_splitters",
    "tqdm>=4.0.0",
    "ujson>=5.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aic-factcheck/aic-nlp-utils"